--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,18 @@
         }
     ],
     "require": {
-        "php": "^7.2"
+        "php": ">=7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.4@dev",
-        "infection/infection": "0.13.x-dev",
-        "phpmd/phpmd": "dev-master",
-        "phpstan/phpstan": "^0.12.0@dev",
-        "phpstan/phpstan-strict-rules": "^0.12.0@dev",
-        "squizlabs/php_codesniffer": "^3.0@dev",
-        "roave/backward-compatibility-check": "^3.0"
+        "phpunit/phpunit": "*",
+        "infection/infection": "*",
+        "phpmd/phpmd": "*",
+        "phpstan/phpstan": "*",
+        "phpstan/phpstan-strict-rules": "*",
+        "squizlabs/php_codesniffer": "*",
+        "phpcompatibility/php-compatibility": "*",
+        "roave/backward-compatibility-check": "*",
+        "roave/security-advisories": "*"
     },
     "autoload": {
         "psr-4": {
