Update README.md and commented checks in travis for empty src

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,9 +28,9 @@ before_script:
 
 script:
   - composer validate --no-check-all
-  - composer phpcs
-  - composer phpmd
-  - composer phpstan
+  #- composer phpcs
+  #- composer phpmd
+  #- composer phpstan
   #- composer phpunit || exit 1
   #- composer infection || exit 1
   #- composer coverage
