--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "phpunit": "phpunit",
         "infection": "infection --min-msi=50 --min-covered-msi=70 --log-verbosity=all",
         "coverage": "phpunit --coverage-text --coverage-html ./build/coverage/html --coverage-clover ./build/coverage/clover.xml",
-        "bccheck": "roave-backward-compatibility-check"
+        "bccheck": "roave-backward-compatibility-check",
+        "post-install-cmd": "App\\ComposerEventHandler::postInstall"
     },
     "minimum-stability": "dev"
 }
