--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,10 @@
         "infection": "infection --min-msi=50 --min-covered-msi=70 --log-verbosity=all",
         "coverage": "phpunit --coverage-text --coverage-html ./build/coverage/html --coverage-clover ./build/coverage/clover.xml",
         "bccheck": "roave-backward-compatibility-check",
-        "post-install-cmd": "App\\ComposerEventHandler::postInstall"
+        "post-install-cmd": [
+            "App\\ComposerEventHandler::postInstall",
+            "composer dumpautoload"
+        ]
     },
     "minimum-stability": "dev"
 }
