--- a/composer.json
+++ b/composer.json
@@ -42,10 +42,7 @@
         "infection": "infection --min-msi=50 --min-covered-msi=70 --log-verbosity=all",
         "coverage": "phpunit --coverage-text --coverage-html ./build/coverage/html --coverage-clover ./build/coverage/clover.xml",
         "bccheck": "roave-backward-compatibility-check",
-        "post-autoload-dump": [
-            "App\\ComposerEventHandler::postAutoloadDump",
-            "composer dump-autoload"
-        ]
+        "post-autoload-dump": "App\\ComposerEventHandler::postAutoloadDump"
     },
     "minimum-stability": "dev"
 }
