--- a/composer.json
+++ b/composer.json
@@ -43,9 +43,8 @@
         "infection": "infection --min-msi=50 --min-covered-msi=70 --log-verbosity=all",
         "coverage": "phpunit --coverage-text --coverage-html ./build/coverage/html --coverage-clover ./build/coverage/clover.xml",
         "bccheck": "roave-backward-compatibility-check",
-        "post-autoload-dump": "Yaroslavche\\PhpProject\\ComposerEventHandler::postAutoloadDump",
-        "post-install-cmd": "Yaroslavche\\PhpProject\\ComposerEventHandler::postInstall",
-        "post-create-project-cmd": "Yaroslavche\\PhpProject\\ComposerEventHandler::postCreateProject"
+        "post-install-cmd": "Yaroslavche\\PhpProject\\ComposerEventHandler::runInstall",
+        "post-create-project-cmd": "Yaroslavche\\PhpProject\\ComposerEventHandler::runInstall"
     },
     "minimum-stability": "dev"
 }
