--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
-## Uncomment the lines below to exclude these files in dist
 # tests/ export-ignore
 # .gitattributes export-ignore
 # .gitignore export-ignore
@@ -8,5 +7,5 @@
 # phpstan.neon export-ignore
 # phpunit.xml.dist export-ignore
 
-# Auto detect text files and perform LF normalization
+## Auto detect text files and perform LF normalization
 * text=auto
