--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "yaroslavche/php-project",
-    "description": "Clean PHP7 project with installed dev-tools",
+    "description": "Clean PHP8 project with installed dev-tools",
     "type": "project",
     "license": "MIT",
     "authors": [
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2"
+        "php": ">=8.1"
     },
     "require-dev": {
         "phpunit/phpunit": "*",
@@ -20,7 +20,6 @@
         "phpstan/phpstan-strict-rules": "*",
         "squizlabs/php_codesniffer": "*",
         "phpcompatibility/php-compatibility": "*",
-        "roave/backward-compatibility-check": "*",
         "roave/security-advisories": "*"
     },
     "autoload": {
@@ -35,16 +34,25 @@
         }
     },
     "scripts": {
-        "phpcs": "phpcs",
-        "phpcbf": "phpcbf",
-        "phpmd": "phpmd src ansi cleancode,codesize,controversial,design,naming,unusedcode",
-        "phpstan": "phpstan analyse src/ -c phpstan.neon --level=7 --no-progress -vv --memory-limit=-1",
+        "phpcs": "XDEBUG_MODE=off phpcs --standard=./phpcs.xml.dist",
+        "phpcbf": "XDEBUG_MODE=off phpcbf --standard=./phpcs.xml.dist",
+        "phpmd": "XDEBUG_MODE=off phpmd src ansi cleancode,codesize,controversial,design,naming,unusedcode",
+        "phpstan": "XDEBUG_MODE=off phpstan analyse src/ -c ./phpstan.neon --level=9 --no-progress -vv --memory-limit=-1",
         "phpunit": "phpunit",
-        "infection": "infection --min-msi=50 --min-covered-msi=70 --log-verbosity=all",
-        "coverage": "phpunit --coverage-text --coverage-html ./build/coverage/html --coverage-clover ./build/coverage/clover.xml",
-        "bccheck": "roave-backward-compatibility-check",
+        "coverage": "XDEBUG_MODE=coverage phpunit --coverage-text --coverage-html ./var/coverage/html --coverage-clover ./var/coverage/clover.xml",
+        "infection": "XDEBUG_MODE=coverage infection --min-msi=100 --min-covered-msi=100 --log-verbosity=all",
+        "bccheck": "XDEBUG_MODE=off roave-backward-compatibility-check",
         "post-install-cmd": "Yaroslavche\\PhpProject\\ComposerEventHandler::runInstall",
-        "post-create-project-cmd": "Yaroslavche\\PhpProject\\ComposerEventHandler::runInstall"
+        "post-create-project-cmd": "Yaroslavche\\PhpProject\\ComposerEventHandler::runInstall",
+        "ci:pack": [
+            "@phpcs", "@phpmd", "@phpstan", "@phpunit"
+        ]
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "config": {
+        "allow-plugins": {
+            "infection/extension-installer": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
+    }
 }
