--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -4,19 +4,13 @@
          xsi:noNamespaceSchemaLocation="vendor/squizlabs/php_codesniffer/phpcs.xsd">
 
     <arg name="basepath" value="."/>
-    <arg name="cache" value=".php_cs.cache"/>
+    <arg name="cache" value=".phpcs-cache"/>
     <arg name="colors"/>
     <arg name="extensions" value="php"/>
 
-    <rule ref="PSR2"/>
+    <rule ref="PSR12"/>
 
     <file>src/</file>
-
-    <rule ref="Generic.Files.LineLength">
-        <properties>
-            <property name="lineLimit" value="300"/>
-            <property name="absoluteLineLimit" value="500"/>
-        </properties>
-    </rule>
+    <file>tests/</file>
 
 </ruleset>
